Add GitLab CI build script.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,19 @@
+**/.pytest_cache
+**/node_modules
+**/coverage
+**/dist
+**/.eslintcache
+**/__pycache__
+.github
+.vscode
 coverage
-packages/*/node_modules
-node_modules
-scripts
+docs
 helm
 nginx
+scripts
+services/datalad/.venv
+services/datalad/node_modules
+.env.example
+config.env.example
+LICENSE
+README.md
