--- a/packages/openneuro-indexer/Dockerfile
+++ b/packages/openneuro-indexer/Dockerfile
@@ -1,7 +1,4 @@
-FROM node:12.18.2-alpine3.12 as indexer
+FROM openneuro/node AS build
 
-ADD . /srv
-WORKDIR /srv
-RUN apk add git && yarn
 WORKDIR /srv/packages/openneuro-indexer
 CMD ["yarn", "openneuro-indexer"]
