--- a/services/datalad/Dockerfile
+++ b/services/datalad/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8.3-alpine3.12
+FROM python:3.8-slim as base
 
 COPY package.json /package.json
 COPY Pipfile /Pipfile
@@ -7,21 +7,32 @@ COPY datalad_service /datalad_service
 COPY hash-paths.js /hash-paths.js
 COPY get_docker_scale.py /get_docker_scale.py
 COPY ./ssh_config /root/.ssh/config
+# Install node the Dockery-but-hacky-way
+COPY --from=node:14.4.0-buster /usr/local/bin/node /usr/local/bin/node
 
-RUN apk --update add bash yarn git python3 py3-pip openssl openssh ca-certificates py-openssl wget \
-  && wget -O git-annex-standalone-amd64.tar.gz http://archive.org/download/git-annex-builds/SHA256E-s54746876--31525511e3aecfd77a0425f0c3ae3f52194e841288300ab04f2e60406619d225.tar.gz \
-  && tar -xvf git-annex-standalone-amd64.tar.gz \
-  && rm git-annex-standalone-amd64.tar.gz \
-  && mv git-annex.linux/* /usr/local/bin \
-  && apk --update add --virtual build-dependencies libffi-dev openssl-dev python3-dev py3-pip build-base libxml2-dev libxslt-dev \
-  && pip install 'pipenv==2020.6.2' \
-  && pipenv install --deploy --system \
-  && apk del build-dependencies wget \
-  && mkdir /datalad \
+RUN apt-get update \
+  && node --version \
+  && apt-get install -y curl openssh-client \
   && ssh-keyscan github.com >> /root/.ssh/known_hosts \
+  && mkdir /yarn \
+  && curl -L https://github.com/yarnpkg/yarn/releases/download/v1.22.5/yarn-v1.22.5.tar.gz | tar -C /yarn --strip-components 1 -xvz \
+  && ln -sf /yarn/bin/yarn /usr/local/bin/yarn \
+  && curl -L http://archive.org/download/git-annex-builds/SHA256E-s54746876--31525511e3aecfd77a0425f0c3ae3f52194e841288300ab04f2e60406619d225.tar.gz | tar -C /usr/local/bin --strip-components 1 -xvz \
+  && pip3 install 'pipenv==2020.6.2' \
+  && pipenv install --deploy --system \
   && chmod 600 /root/.ssh/config \
-  && yarn
+  && yarn \
+  && apt-get remove -y openssh-client libbsd0 libedit2 libx11-6 libx11-data libxau6 libxcb1 libxdmcp6 libxext6 libxmuu1 xauth \
+  && rm -rf /var/lib/apt/lists/*
 
 ENV LOCPATH=""
-
 CMD ["gunicorn", "--bind", "0.0.0.0:80", "--reload", "datalad_service.app:create_app('/datalad')", "--workers", "8", "--worker-class", "gevent", "--timeout", "60", "--keep-alive", "30"]
+
+FROM base as tests
+
+COPY tests /tests
+# The base build confirms the lockfile is correct, skip updating or checking it here
+RUN pipenv install --keep-outdated --dev
+RUN pipenv run pytest ./tests
+
+FROM base as production
