Add a root level script to rebuild dependencies.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "start": "docker-compose up --build -V",
     "bootstrap": "lerna bootstrap",
     "test": "jest",
     "coverage": "jest --coverage",
