Fix TypeScript build issue with openneuro-server

--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -115,7 +115,7 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "./jestsetup.js"
+      "./jestsetup.ts"
     ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
