Drop cron dependency and use locking to send notifications.
Also catches a spurious error for failure to save mailgunIdentifier.

--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -27,8 +27,8 @@
     "base64url": "^3.0.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
-    "cron": "^1.1.0",
     "crypto": "^1.0.1",
+    "date-fns": "^2.16.1",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "elastic-apm-node": "^3.7.0",
