--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -99,6 +99,7 @@
     "jest": "^24.6.0",
     "jest-fetch-mock": "^1.4.1",
     "mini-css-extract-plugin": "^0.4.1",
+    "moment-timezone": "^0.5.31",
     "node-sass": "4.14.1",
     "object.fromentries": "^2.0.0",
     "react-addons-test-utils": "^15.6.2",
