--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -55,7 +55,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
-    "react-toastify": "^4.4.0",
+    "react-toastify": "6.0.9",
     "react-virtualized": "^9.21.0",
     "resize-observer-polyfill": "^1.5.1",
     "semver": "^5.5.0",
