--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-server",
-  "version": "3.24.0-alpha.1",
+  "version": "3.24.0",
   "description": "Core service for the OpenNeuro platform.",
   "license": "MIT",
   "main": "src/server.js",
