--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -16,14 +16,12 @@
   },
   "author": "Squishymedia",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/client": "^3.3.4",
     "@elastic/apm-rum": "^5.5.0",
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
     "@loadable/component": "^5.7.0",
     "@sentry/browser": "^4.5.3",
-    "apollo-client": "2.6.4",
-    "apollo-link-ws": "^1.0.18",
     "babel-runtime": "^6.26.0",
     "bids-validator": "1.5.7",
     "bowser": "^1.7.3",
@@ -42,7 +40,6 @@
     "pluralize": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "16.9.0",
-    "react-apollo": "3.1.3",
     "react-bootstrap": "0.31.3",
     "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
