Serve sw.js with max-age=0 to prevent mismatched bundles.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -95,7 +95,11 @@ server {
     # crn-web app
     root /srv/app/dist;
     location /index.html {
-        add_header Cache-Control 'no-cache';
+        add_header Cache-Control 'max-age=0';
+    }
+
+    location /sw.js {
+        add_header Cache-Control 'max-age=0';
     }
 
     location / {
