--- a/packages/openneuro-app/nginx.conf
+++ b/packages/openneuro-app/nginx.conf
@@ -14,7 +14,11 @@ server {
   location /robots.txt {return 200 "User-agent: *\nAllow: /\n";}
 
   location /index.html {
-    add_header Cache-Control 'no-cache';
+    add_header Cache-Control 'max-age=0';
+  }
+
+  location /sw.js {
+    add_header Cache-Control 'max-age=0';
   }
 
   location / {
